traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:6: error: not found: value &&
  while (getX()!=(a-1) || getY!=(b-1))&&{
                                      ^